# garage

./: .gitignore  1034.cc  1753.cc  Artificial Neural Networks_student.ipynb  Fisher Discriminant Analysis_student.ipynb  HW13_random_sampling.ipynb  HW15_clustering_of_vector_data.ipynb  Logistic regression_student (1).ipynb  Untitled.ipynb  a.out  dcgan_fft.py  heap_overflow.c  hw1.cc  hw10.ipynb  hw15_data.npy  hw2.cc  hw4.cc  hw4.py  k-th.py  k1.ipynb  multiprocessing_ex.ipynb  project1_eigenface.ipynb  project1_eigenface.py  project2_DCT.ipynb  rsa.py  test.txt  text_similarity.cc  ts  tt.c  tutorial.ipynb
Baekjoon/: .gitignore  CMakeLists.txt  README.md
Baekjoon/1000/: 1000.c  1000.cs  1000.py
Baekjoon/1001/: 1001.c  1001.cs  1001.py
Baekjoon/1002/: 1002.c
Baekjoon/1003/: 1003.c
Baekjoon/10039/: 10039.cc
Baekjoon/1004/: 1004.c
Baekjoon/1005/: 1005.c
Baekjoon/1006/: 1006.cc
Baekjoon/1008/: 1008.c
Baekjoon/1009/: 1009.cc
Baekjoon/1010/: 1010.c
Baekjoon/10101/: 10101.c
Baekjoon/1011/: 1011.c
Baekjoon/1013/: 1013.cpp
Baekjoon/10172/: 10172.c
Baekjoon/1021/: 1021.c  1021.cc  1021.py
Baekjoon/10250/: 10250.c
Baekjoon/10430/: 10430.c
Baekjoon/1065/: 1065.cc  1065.py
Baekjoon/10718/: 10718.c
Baekjoon/10809/: 10809.cc
Baekjoon/10817/: 10817.cpp
Baekjoon/10828/: 10828.c
Baekjoon/10845/: 10845.c
Baekjoon/10866/: 10866.c
Baekjoon/10869/: 10869.c
Baekjoon/10871/: 10871.c
Baekjoon/10989/: 10889_counting.c
Baekjoon/10998/: 10998.c
Baekjoon/11050/: 11050.cc
Baekjoon/11051/: 11051.cc
Baekjoon/11053/: 11053.c
(+575 files in other folders)
