cmake_minimum_required(VERSION 3.8)
project(Baekjoon)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        C/1000/1000.c
        C/1001/1001.c
        C/1002/1002.c
        C/1003/1003.c
        C/1004/1004.c
        C/1005/1005.c
        C/1008/1008.c
        C/1010/1010.c
        C/1011/1011.c
        C/10172/10172.c
        C/10430/10430.c
        C/10718/10718.c
        C/10869/10869.c
        C/10871/10871.c
        C/10998/10998.c
        C/11053/11053.c
        C/1152/1152.c
        C/11718/11718.c
        C/11719/11719.c
        C/11720/11720.c
        C/11721/11721.c
        C/11726/11726.c
        C/11726/11726_dp.c
        C/1463/1463.c
        C/1546/1546.c
        C/1697/1697.c
        C/1697/1697_new.c
        C/1912/1912.c
        C/1924/1924.c
        C/2156/2156.c
        C/2193/2193.c
        C/2193/findBinary.c
        C/2411/2411.c
        C/2557/2557.c
        C/2839/2839.c
        C/7287/7287.c
        C++14/1009/1009.cc C++14/1013/1013.cpp)

add_executable(Baekjoon ${SOURCE_FILES})